# Packet

./: .gitignore  CMakeLists.txt  LICENSE  Packet.h  Packet.sln  PacketDirectory.cpp  PacketDirectory.h  PacketFile.cpp  PacketFile.h  PacketIndex.h  PacketIndexLoader.cpp  PacketIndexLoader.h  PacketLoader.h  PacketManager.cpp  PacketManager.h  PacketMode.h  PacketSerialize.h  PacketString.cpp  PacketString.h  README.md
Packet/: Packet.cpp  Packet.h  Packet.vcxproj  Packet.vcxproj.filters  PacketBaseClass.cpp  PacketBaseClass.h  PacketCondensedFileLoader.cpp  PacketCondensedFileLoader.h  PacketCondensedModeFileLoader.cpp  PacketCondensedModeFileLoader.h  PacketCondenser.cpp  PacketCondenser.h  PacketConfig.h  PacketDataLoader.h  PacketEditModeFileLoader.cpp  PacketEditModeFileLoader.h  PacketError.cpp  PacketError.h  PacketFile.cpp  PacketFile.h  PacketFileConverter.cpp  PacketFileConverter.h  PacketFileDataOperations.h  PacketFileImporter.cpp  PacketFileImporter.h  PacketFileIndexer.cpp  PacketFileIndexer.h  PacketFileLoader.cpp  PacketFileLoader.h  PacketFileLoaderQueue.cpp  PacketFileLoaderQueue.h  PacketFileManager.cpp  PacketFileManager.h  PacketFileQueue.cpp  PacketFileQueue.h  PacketFileReference.cpp  PacketFileReference.h  PacketFileReferences.h  PacketFileRemover.cpp  PacketFileRemover.h  (+41 more)
Packet/Data/: Data.config  Data.manifest  Data0.pack  Data1.pack  Data2.pack  Data3.pack  test.txt  test.txt.ref  texto.txt
Packet/File/: PacketFile.cpp  PacketFile.h  PacketFileHeader.cpp  PacketFileHeader.h  PacketFileManager.cpp  PacketFileManager.h  PacketFileReferences.cpp  PacketFileReferences.h
Packet/File/Backup/: PacketBackupManager.cpp  PacketBackupManager.h
Packet/File/Converter/: PacketFileConverter.h  PacketFileDefaultConverter.cpp  PacketFileDefaultConverter.h
Packet/File/Importer/: PacketFileImporter.cpp  PacketFileImporter.h
Packet/File/Indexer/: PacketFileIndexer.cpp  PacketFileIndexer.h  PacketPlainFileIndexer.cpp  PacketPlainFileIndexer.h
Packet/File/Loader/: PacketCondensedFileLoader.cpp  PacketCondensedFileLoader.h  PacketFileLoader.cpp  PacketFileLoader.h  PacketPlainFileLoader.cpp  PacketPlainFileLoader.h
Packet/File/Reference/: PacketFileReferences.cpp  PacketFileReferences.h  PacketReferenceManager.cpp  PacketReferenceManager.h
Packet/File/Saver/: PacketFileSaver.cpp  PacketFileSaver.h
Packet/File/Watcher/: FileWatcher.cpp  FileWatcher.h  FileWatcherImpl.h  FileWatcherLinux.cpp  FileWatcherLinux.h  FileWatcherManager.cpp  FileWatcherManager.h  FileWatcherOSX.cpp  FileWatcherOSX.h  FileWatcherWin32.cpp  FileWatcherWin32.h
Packet/Old/: Packet.h  PacketIndex.cpp  PacketLoader.cpp  PacketString.cpp
Packet/Old (rework)/: PacketDataLoader.cpp  PacketDataLoader.h  PacketError.cpp  PacketError.h  PacketFileDataOperations.cpp  PacketFileDataOperations.h  PacketFragment.h  PacketMultipleQueue.h  PacketObject.h  PacketObjectHashTable.h  PacketObjectIterator.h  PacketObjectIteratorPath.h  PacketObjectManager.h  PacketObjectStructure.h  PacketObjectTemporaryPath.h  PacketStringOperations.cpp  PacketStringOperations.h  PacketStrings.h
Packet/Peon-master/: .gitignore  Peon.h  PeonConfig.h  PeonJob.cpp  PeonJob.h  PeonStealingQueue.cpp  PeonStealingQueue.h  PeonSystem.cpp  PeonSystem.h  PeonWorker.cpp  PeonWorker.h  README.md
Packet/Resource/: PacketMultipleQueue.h  PacketResource.cpp  PacketResource.h  PacketResourceDeleter.cpp  PacketResourceDeleter.h  PacketResourceFactory.h  PacketResourceHolder.h  PacketResourceInstance.cpp  PacketResourceInstance.h  PacketResourceLoader.cpp  PacketResourceLoader.h  PacketResourceManager.cpp  PacketResourceManager.h  PacketResourceStorage.cpp  PacketResourceStorage.h  PacketResourceWatcher.cpp  PacketResourceWatcher.h
Packet/Resource/Deleter/: PacketResourceDeleter.cpp  PacketResourceDeleter.h
Packet/Resource/Factory/: PacketResourceFactory.h
Packet/Resource/Loader/: PacketResourceLoader.cpp  PacketResourceLoader.h
Packet/Resource/Storage/: PacketResourceStorage.cpp  PacketResourceStorage.h
Packet/Source/: PacketCondensedModeFileLoader.cpp  PacketCondensedModeFileLoader.h  PacketCondenser.cpp  PacketConfig.h  PacketEditModeFileLoader.cpp  PacketEditModeFileLoader.h  PacketReferenceManager.cpp  PacketReferenceManager.h  PacketScanner.cpp  PacketSystem.cpp  PacketSystem.h
Packet/Source/Resource/: PacketResource.cpp  PacketResource.h  PacketResourceDeleter.cpp  PacketResourceDeleter.h  PacketResourceFactory.cpp  PacketResourceFactory.h  PacketResourceHolder.cpp  PacketResourceInstance.cpp  PacketResourceInstance.h  PacketResourceLoader.cpp  PacketResourceLoader.h  PacketResourceManager.cpp  PacketResourceManager.h  PacketResourceStorage.cpp  PacketResourceStorage.h  PacketResourceWatcher.cpp  PacketResourceWatcher.h
Packet/Temp/: Data.manifest  Data0.pack
Tests/: HelperDefines.h  HelperMethods.h  MyFactory.cpp  MyFactory.h  MyInstance.cpp  MyInstance.h  MyResource.cpp  MyResource.h  TestMain.cpp  TestsFileCopy.cpp  TestsFileCreate.cpp  TestsFileDelete.cpp  TestsFileImport.cpp  TestsFileMove.cpp  TestsFileReferences.cpp  TestsFileRename.cpp  TestsInstances.cpp  TestsMain.cpp  TestsReferences.cpp  TestsResourceReplace.cpp
